[package]
name = "rtmouse-rs"
version = "0.1.0"
authors = ["Artemis Everfree <mail@artemis.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.x11]
version = "2.18"
features = ["xlib", "xtest", "xinput"]

[dependencies]
signal-hook = "0.3.9"
